<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp"
        tools:context=".Intro_PlaceYouLive">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/si_place_hello"
            android:layout_marginBottom="20dp"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/si_place_description"
            android:layout_marginBottom="20dp"
    />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/si_place_postcode"
            android:id="@+id/eti_place_postcode"
    />
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/si_place_continue"
            android:id="@+id/btni_place_continue"
            android:enabled="false"
    />


</LinearLayout>