<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp"
        tools:context=".Intro_NotificationPermission">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/si_notification_hello"
            android:layout_marginBottom="20dp"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/si_notification_description"
            android:layout_marginBottom="20dp"
    />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/si_notification_permission"
            android:id="@+id/btni_notification_permission"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/si_notification_skip"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:id="@+id/tvi_notification_skip"
    />

</LinearLayout>