<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        tools:context=".Ticketting.CPT_Ticketting">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/st_buyticket">
    </TextView>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:textSize="17sp"
            android:background="@drawable/roundbutton"
            android:textColor="@android:color/white"
            android:text="@string/st_singleticket"
            android:id="@+id/btnt_singleticket">
    </Button>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:textSize="17sp"
            android:background="@drawable/roundbutton"
            android:textColor="@android:color/white"
            android:text="@string/st_dailypass"
            android:id="@+id/btnt_dailypass">
    </Button>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:textSize="17sp"
            android:background="@drawable/roundbutton"
            android:textColor="@android:color/white"
            android:text="@string/st_monthlypass"
            android:id="@+id/btnt_monthlypass">
    </Button>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:text="@string/st_viewtickets">
    </TextView>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:textSize="17sp"
            android:background="@drawable/roundbutton"
            android:textColor="@android:color/white"
            android:text="@string/st_tickets"
            android:id="@+id/btnt_tickets">
    </Button>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:text="@string/st_viewhistory">
    </TextView>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:textSize="17sp"
            android:background="@drawable/roundbutton"
            android:textColor="@android:color/white"
            android:text="@string/st_purchasehistory"
            android:id="@+id/btnt_purchasehistory">
    </Button>


</LinearLayout>