<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/whitegray"
                android:padding="20dp"
                android:layout_margin="20dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/st_history_receipt"
                    android:fontFamily="sans-serif-black">
            </TextView>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/darker_gray">
            </View>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/st_tickettype">
                </TextView>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/st_ticketsequence_withround">
                </TextView>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:textSize="20sp"
                        android:id="@+id/tvt_history_receipttickettype"
                        tools:text="@string/st_singleticket">
                </TextView>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        tools:text="(">
                </TextView>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        android:id="@+id/tvt_history_receiptticketsequence"
                        tools:text="@string/st_singleticket">
                </TextView>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        tools:text=")">
                </TextView>
            </LinearLayout>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/st_agegroup">
            </TextView>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:id="@+id/tvt_history_receiptagegroup"
                    tools:text="@string/st_tickets_agegroup">
            </TextView>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/paymentmethod">
            </TextView>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:id="@+id/tvt_history_receiptcardname"
                    tools:text="@string/smore_paycard_cardname">
            </TextView>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:id="@+id/tvt_history_receiptpcardnumber"
                    tools:text="@string/smore_paycard_cardnumber">
            </TextView>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/dateofbought">
            </TextView>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:id="@+id/tvt_history_receiptdateofbought"
                    tools:text="@string/emptydate">
            </TextView>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/dateofvalidation">
            </TextView>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:id="@+id/tvt_history_receiptdateofvalidation"
                    tools:text="@string/emptydate">
            </TextView>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/darker_gray">
            </View>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/price"
                            android:textSize="20sp"
                            android:fontFamily="sans-serif-black">
                    </TextView>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/taxinclude">
                    </TextView>
                </LinearLayout>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/tvt_history_receiptprice"
                        android:textSize="30sp"
                        android:fontFamily="sans-serif-black">
                </TextView>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:textSize="20sp"
                        android:layout_marginStart="10dp"
                        android:paddingBottom="12dp"
                        android:text="@string/canadadollar">
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnt_history_receiptok"
                android:text="@string/ok"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center">
        </Button>
    </LinearLayout>
</ScrollView>