<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Intro_Done">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/si_done"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/si_done_description"
            android:layout_marginBottom="30dp"
    />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/si_done_continue"
            android:id="@+id/btni_done_continue"
    />

</LinearLayout>